# uvatlastest

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ShapesGenerator.h  TestGeometry.h  TestHelpers.h  atlas.cpp  directxtest.cpp  directxtest.h  imt.cpp  process.cpp  utils.cpp  xtuvatlas_Desktop_2012.sln  xtuvatlas_Desktop_2012.vcxproj  xtuvatlas_Desktop_2013.sln  xtuvatlas_Desktop_2013.vcxproj  xtuvatlas_Desktop_2013.vcxproj.filters  xtuvatlas_Desktop_2015.sln  xtuvatlas_Desktop_2015.vcxproj  xtuvatlas_Desktop_2017.sln  xtuvatlas_Desktop_2017.vcxproj  xtuvatlas_Desktop_2019.sln  xtuvatlas_Desktop_2019.vcxproj  xtuvatlas_Desktop_2022.sln  xtuvatlas_Desktop_2022.vcxproj
HeaderTest/: CMakeLists.txt  main.cpp
toolscripts/: failure.cmd  run.cmd  t-basics.cmd  t-frame.cmd  t-long-options.cmd  t-misc.cmd  t-oldfiletypes.cmd  t-sdkmesh2.cmd
toolscripts/ref/: Head_Big_Ears._obj  Head_Big_Ears.mtl
